# DL_Project

./: Makefile  README.md  pyproject.toml
notebooks/: FFNN_Time_Series.ipynb  Improved_Time_Series_transformer.ipynb  Initial_Time_Series_transformer.ipynb
